--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ description:
 date_format: "%R on %b %e, %Y"
 
 # RSS / Email (optional) subscription links (change if using something like Feedburner)
-subscribe_rss: /atom.xml
+subscribe_rss: /diazepam/atom.xml
 subscribe_email:
 # RSS feeds can list your email address if you like
 email:
