Updates for new URLs.

--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ email:
 root: /diazepam
 permalink: /blog/:year/:month/:day/:title/
 source: source
-destination: public
+destination: public/diazepam
 plugins: plugins
 code_dir: downloads/code
 category_dir: blog/categories
